--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5431/production
+spring.datasource.url=jdbc:postgresql://database:5432/production
 spring.datasource.username=postgres
 spring.datasource.password=root
 
